<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Background"
    android:padding="@dimen/item_padding">

    <ImageView
        android:id="@+id/imageViewPoster"
        android:layout_width="@dimen/poster_width"
        android:layout_height="@dimen/poster_height"
        android:contentDescription="@string/movie_poster"
        android:scaleType="centerCrop"
        android:src="@drawable/searchitemimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin_start"
        android:text="@string/spiderman"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageViewPoster"
        app:layout_constraintTop_toTopOf="@id/imageViewPoster" />

    <LinearLayout
        android:id="@+id/ratingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rating_margin_top"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <ImageView
            android:id="@+id/imageViewStar"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginTop="9dp"
            android:src="@drawable/ic_star" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="9dp"
            android:text="@string/_9_5"
            android:textColor="@color/color_star"
            android:textSize="@dimen/rating_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_genre"
        style="@style/MovieInfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="9dp"
        android:drawablePadding="@dimen/icon_text_padding"
        android:text="@string/action"
        app:drawableStartCompat="@drawable/ic_ticket"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/ratingLayout" />

    <TextView
        android:id="@+id/tv_date"
        style="@style/MovieInfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="9dp"
        android:drawablePadding="@dimen/icon_text_padding"
        android:text="@string/_2019"
        app:drawableStartCompat="@drawable/ic_calender"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_genre" />

    <TextView
        android:id="@+id/tv_minutes"
        style="@style/MovieInfoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="9dp"
        android:drawablePadding="@dimen/icon_text_padding"
        android:text="@string/_139_minutes"
        app:drawableStartCompat="@drawable/ic_clock"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_date" />

</androidx.constraintlayout.widget.ConstraintLayout>